fixed paragraph text alignment, fixed image and footer centering, working on blog posts/pagination

--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ hr {
   /*width: 148px;*/
   /*height: 148px;*/
   padding-top: 40%;
+  text-align: center;
   margin: auto;
   /*margin-top: 50px;*/
 }
@@ -235,6 +236,11 @@ hr {
   text-align: left;
   /*text-align: justify;*/
 }
+#content img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /*#content ul {
   padding-left: 0px;
@@ -245,11 +251,11 @@ hr {
   float: left;
 }*/
 
-#communication {
+/*#communication {
   width: 625px;
   height: 430px;
   margin: auto;
-}
+}*/
 
 /* about page formatting */
 
@@ -302,7 +308,7 @@ hr {
   margin: auto;
   left: 0;
   right: 0;
-  width: 800px;
+  width: 250px;
   height: 50px;
   top: 650px;
 }
